@@ -19,9 +19,8 @@ import static ch.post.it.evoting.cryptoprimitives.utils.Validations.allEqual;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
 
+import java.util.List;
 import java.util.Objects;
-
-import com.google.common.collect.ImmutableList;
 
 import ch.post.it.evoting.cryptoprimitives.hashing.Hashable;
 import ch.post.it.evoting.cryptoprimitives.hashing.HashableList;
@@ -126,8 +125,8 @@ public class SingleValueProductArgument implements HashableList {
 	}
 
 	@Override
-	public ImmutableList<? extends Hashable> toHashableForm() {
-		return ImmutableList.of(c_d, c_delta, c_Delta, a_tilde, b_tilde, r_tilde, s_tilde);
+	public List<? extends Hashable> toHashableForm() {
+		return List.of(c_d, c_delta, c_Delta, a_tilde, b_tilde, r_tilde, s_tilde);
 	}
 
 	/**
@@ -202,8 +201,8 @@ public class SingleValueProductArgument implements HashableList {
 			checkNotNull(this.s_tilde);
 
 			// Cross group checking.
-			final ImmutableList<GqElement> gqGroupMembers = ImmutableList.of(c_d, c_delta, c_Delta);
-			final ImmutableList<GroupVectorElement<ZqGroup>> zqGroupMembers = ImmutableList.of(a_tilde, b_tilde, r_tilde, s_tilde);
+			final List<GqElement> gqGroupMembers = List.of(c_d, c_delta, c_Delta);
+			final List<GroupVectorElement<ZqGroup>> zqGroupMembers = List.of(a_tilde, b_tilde, r_tilde, s_tilde);
 			checkArgument(allEqual(gqGroupMembers.stream(), GroupVectorElement::getGroup),
 					"cd, cLowerDelta, cUpperDelta must belong to the same group.");
 			checkArgument(allEqual(zqGroupMembers.stream(), GroupVectorElement::getGroup),
